[package]
name = "cautious-engine"
version = "0.1.0"
edition = "2021"
authors = ["Cautious Engine Contributors"]
description = "A defensive security toolkit for ethical hackers and penetration testers"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
