[package]
name = "cautious-engine"
version = "2.0.0"
edition = "2021"
authors = ["Cautious Engine Contributors"]
description = "A defensive security toolkit for ethical hackers and penetration testers"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
